# omni_ros_gui

./: CMakeLists.txt  README.md  package.xml
msg/: m_encoder.msg  m_flags.msg  m_motion.msg  m_motion_n.msg
rviz/: rviz.rviz
scripts/: features  features_1  features_10  features_2  features_2_1  features_2_2  features_2_3  features_2_4  features_2_5  features_2_6  features_2_7  features_2_8  features_3  features_3_1  features_3_2  features_3_3  features_4  features_4_1  features_4_2  features_4_3  features_5  features_6  features_7  features_8  features_9  features_ok_1  features_ok_2  features_ok_3  features_ok_4  manual_ctrl.py  ml_data  svm.py
scripts/results/: results_theta
src/: image_converter.cpp  view_img_raw.cpp
